issue_check/result/logs/junit5/oe_test_junit5_noimport/2023-02-15-05_06_15.log
+ source ../common/lib.sh
++ source /root/mugen-riscv/libs/locallibs/common_lib.sh
+++ python3 --version
+++ '[' 0 -eq 0 ']'
+++ source /root/mugen-riscv/libs/locallibs/common_lib_python.sh
+ main
++ type -t post_test
+ '[' -n function ']'
+ trap post_test EXIT INT HUP TERM
+ grep expect
+ rpm -qa
++ type -t config_params
+ '[' -n '' ']'
++ type -t pre_test
+ '[' -n function ']'
+ pre_test
+ LOG_INFO 'Start environment preparation.'
+ message='Start environment preparation.'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level info --message 'Start environment preparation.'
Wed Feb 15 05:06:22 2023 - INFO  - Start environment preparation.
+ pre_junit5
+ DNF_INSTALL junit5
+ pkgs=junit5
+ node=1
+ '[' -z '' ']'
+ tmpfile=
++ python3 /root/mugen-riscv/libs/locallibs/rpm_manage.py install --pkgs junit5 --node 1 --tempfile ''
+ tmpfile2=/tmp/tmpfmpg1tr4
+ '[' -z '' ']'
+ tmpfile=/tmp/tmpfmpg1tr4
++ rpm -qa 'java*'
++ awk -F - '{print $2}'
++ grep 'java-.*-openjdk'
++ head -1
+ java_version=1.8.0
+ DNF_INSTALL java-1.8.0-devel
+ pkgs=java-1.8.0-devel
+ node=1
+ '[' -z /tmp/tmpfmpg1tr4 ']'
++ python3 /root/mugen-riscv/libs/locallibs/rpm_manage.py install --pkgs java-1.8.0-devel --node 1 --tempfile /tmp/tmpfmpg1tr4
+ tmpfile2=/tmp/tmpfmpg1tr4
+ '[' -z /tmp/tmpfmpg1tr4 ']'
+ LOG_INFO 'End of environmental preparation!'
+ message='End of environmental preparation!'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level info --message 'End of environmental preparation!'
Wed Feb 15 05:11:12 2023 - INFO  - End of environmental preparation!
++ type -t run_test
+ '[' -n function ']'
+ run_test
+ LOG_INFO 'Start testing...'
+ message='Start testing...'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level info --message 'Start testing...'
Wed Feb 15 05:11:14 2023 - INFO  - Start testing...
+ javac -cp ../common/junit-platform-console-standalone-1.6.2.jar -d . TestJunit5.java
+ CHECK_RESULT 0
+ actual_result=0
+ expect_result=0
+ mode=0
+ error_log=
+ '[' -z 0 ']'
+ '[' 0 -eq 0 ']'
+ test 0x '!=' 0x
+ return 0
+ java -jar ../common/junit-platform-console-standalone-1.6.2.jar -cp ./ --class-path . --scan-class-path
this BeforeAll
this BeforeEach
[showInfo]
this AfterEach
this BeforeEach
this AfterEach
this AfterAll

Thanks for using JUnit! Support its development at https://junit.org/sponsoring

[36m╷[0m
[36m├─[0m [36mJUnit Jupiter[0m [32m✔[0m
[36m│  └─[0m [36mTestJunit5[0m [32m✔[0m
[36m│     ├─[0m [34mTestA(TestInfo)[0m [32m✔[0m
[36m│     └─[0m [34mfirsttest[0m [32m✔[0m
[36m└─[0m [36mJUnit Vintage[0m [32m✔[0m

Test run finished after 4832 ms
[         3 containers found      ]
[         0 containers skipped    ]
[         3 containers started    ]
[         0 containers aborted    ]
[         3 containers successful ]
[         0 containers failed     ]
[         2 tests found           ]
[         0 tests skipped         ]
[         2 tests started         ]
[         0 tests aborted         ]
[         2 tests successful      ]
[         0 tests failed          ]

+ CHECK_RESULT 0
+ actual_result=0
+ expect_result=0
+ mode=0
+ error_log=
+ '[' -z 0 ']'
+ '[' 0 -eq 0 ']'
+ test 0x '!=' 0x
+ return 0
+ rm -rf com
+ sed -i 's/import org.junit.jupiter.api.*;/\/\/import org.junit.jupiter.api.*;/g' TestJunit5.java
+ javac -cp ../common/junit-platform-console-standalone-1.6.2.jar -d . TestJunit5.java
TestJunit5.java:26: error: cannot find symbol
    public void TestA(TestInfo info){
                      ^
  symbol:   class TestInfo
  location: class TestJunit5
TestJunit5.java:8: error: cannot find symbol
    @BeforeAll
     ^
  symbol:   class BeforeAll
  location: class TestJunit5
TestJunit5.java:12: error: cannot find symbol
    @BeforeEach
     ^
  symbol:   class BeforeEach
  location: class TestJunit5
TestJunit5.java:16: error: cannot find symbol
    @AfterAll
     ^
  symbol:   class AfterAll
  location: class TestJunit5
TestJunit5.java:20: error: cannot find symbol
    @AfterEach
     ^
  symbol:   class AfterEach
  location: class TestJunit5
TestJunit5.java:24: error: cannot find symbol
    @Test
     ^
  symbol:   class Test
  location: class TestJunit5
TestJunit5.java:25: error: cannot find symbol
    @Tag("showInfo")
     ^
  symbol:   class Tag
  location: class TestJunit5
TestJunit5.java:30: error: cannot find symbol
    @Test
     ^
  symbol:   class Test
  location: class TestJunit5
TestJunit5.java:31: error: cannot find symbol
    @DisplayName("firsttest")
     ^
  symbol:   class DisplayName
  location: class TestJunit5
9 errors
+ CHECK_RESULT 1 0 1
+ actual_result=1
+ expect_result=0
+ mode=1
+ error_log=
+ '[' -z 1 ']'
+ '[' 1 -eq 0 ']'
+ test 1x == 0x
+ return 0
+ LOG_INFO 'Finish test!'
+ message='Finish test!'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level info --message 'Finish test!'
Wed Feb 15 05:12:51 2023 - INFO  - Finish test!
+ CASE_RESULT 0
+ case_re=0
+ test -z ''
+ test 0 -eq 0
+ LOG_INFO 'succeed to execute the case.'
+ message='succeed to execute the case.'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level info --message 'succeed to execute the case.'
Wed Feb 15 05:12:53 2023 - INFO  - succeed to execute the case.
+ exec_result=
+ exit 0
+ post_test
+ LOG_INFO 'start environment cleanup.'
+ message='start environment cleanup.'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level info --message 'start environment cleanup.'
Wed Feb 15 05:12:54 2023 - INFO  - start environment cleanup.
+ DNF_REMOVE
+ node=1
+ pkg_list=
+ mode=0
+ [[ -z /tmp/tmpfmpg1tr4 ]]
+ '[' 0 -ne 0 ']'
+ '[' 1 == 0 ']'
+ python3 /root/mugen-riscv/libs/locallibs/rpm_manage.py remove --node 1 --pkgs '' --tempfile /tmp/tmpfmpg1tr4
+ '[' 0 -ne 0 ']'
+ rm -rf com
+ sed -i 's/\/\/import org.junit.jupiter.api.*;/import org.junit.jupiter.api.*;/g' TestJunit5.java
+ LOG_INFO 'Finish environment cleanup!'
+ message='Finish environment cleanup!'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level info --message 'Finish environment cleanup!'
Wed Feb 15 05:13:39 2023 - INFO  - Finish environment cleanup!
